Making shure that invisibles always look the same. fixes #279

--- a/static/editor.css
+++ b/static/editor.css
@@ -82,6 +82,8 @@
 
 .editor .invisible {
   opacity: 0.2;
+  font-weight: normal !important;
+  font-style: normal !important;
 }
 
 .editor .vertical-scrollbar {
