--- a/themes/atom-dark-syntax.css
+++ b/themes/atom-dark-syntax.css
@@ -3,6 +3,10 @@
   color: #c5c8c6;
 }
 
+.editor .invisible {
+  color: #c5c8c6 !important;
+}
+
 .editor .cursor {
   border-color: #FFFFFF;
 }
